Rewrite fpu_int(). Especially, remove the special treatment when |x| < 1 because it forgets to consider FPCR round mode. See PR/46627 for the detail.  Thanks Y.Sugahara for advice.